client-site/src/css/style.css
:root {
    --color-orange: #FF8A00;
    --color-blue: #0C6DFF;
    --color-red: #FF4392;
    --color-white: #fff;
    --color-black: #0F0F0F;

    --gap-miniscule: .5rem;
    --gap-small: 1rem;
    --gap-medium: 1.5rem;
    --gap-large: 2rem;
    --gap-enormous: 4rem;

    --border-fullround: 8rem;
    --border-medround: 4rem;
    --border-smallround: 1rem;

    --bordsize-small: .2rem;
    --bordsize-med: .4rem;
    --bordsize-large: 1rem;

    --fontsize-small: 1rem;
    --fontsize-medium: 1.5rem;
    --fontsize-large: 2.5rem;

    --scale-svg-small: .8;
}

body {
    margin: 0;
    color: var(--color-black);
}

h1 {
    display: none;
}

.navigation {
    background-color: var(--color-orange);
    color: var(--color-black);
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding-inline: var(--gap-enormous);
    inline-size: 100vw;
    top: 0;
    left: 0;
}

.navigation,
.container__footer {
    border: var(--bordsize-small) solid var(--color-black);
}

.navigation,
.theme {
    position: fixed;
    z-index: 1000;
}

ul {
    display: flex;
    flex-direction: row;
    gap: var(--gap-large);
}

li>* {
    color: var(--color-black);
    text-decoration: none;
}

.nav__button {
    background-color: var(--color-black);
    color: var(--color-white);
    padding: var(--gap-miniscule) var(--gap-medium);
}

/* .button::before{
    content: url(../../public/desktop/star.svg);
    display: inline-block;
    width: 5px;
    aspect-ratio: 1/1;
} */

.main {
    margin-block-start: 3rem;
}

.header {
    display: flex;
    flex-direction: column;
}

.title__blue {
    color: var(--color-blue);
}

.title__orange {
    color: var(--color-orange);
}

.title__white {
    color: var(--color-white);
}

.theme {
    display: flex;
    flex-direction: row;
    background-color: var(--color-black);
    max-inline-size: 20%;
    gap: var(--gap-medium);
    padding: var(--gap-small) var(--gap-medium);
    border-radius: var(--border-fullround) 0 0 var(--border-fullround);
    align-items: center;
    border: var(--bordsize-small) solid var(--color-orange);
    right: 0;
    top: 20%;
}

.theme>img {
    max-inline-size: 30%;
    aspect-ratio: 1/1;
}

.theme__flex>p {
    color: var(--color-white);
}

.container__header {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
    background-color: var(--color-black);
    block-size: 90vh;
}

.quote::before {
    content: url(../../public/desktop/orange.svg);
    display: inline-block;
    position: absolute;
    bottom: 20%;
    left: -30%;
    transform: rotate(40deg);
    overflow: hidden;
    z-index: -1;
}

.quote {
    grid-column: 1;
    grid-row: 1/ span 3;
    color: var(--color-white);
    padding-inline: var(--gap-large);
    z-index: 1;
    font-size: var(--fontsize-large);
}

canvas {
    grid-column: -1;
    grid-row: 1/ span 3;
}

.button::before,
.button::after {
    content: url(../../public/desktop/circlestar.svg);
    position: inherit;
}

.button {
    display: flex;
    align-items: center;
    gap: var(--gap-miniscule);
    justify-content: center;
    grid-column: 1/ span 3;
    grid-row: 3;
    font-size: 2rem;
    background-color: var(--color-orange);
    border: var(--color-black) solid var(--bordsize-small);
    place-self: center;
    padding: var(--gap-miniscule) var(--gap-small);
    margin: var(--gap-small) var(--gap-medium);
    text-decoration: none;
    color: var(--color-black);
}

.button:hover {
    background-color: var(--color-black);
    color: var(--color-orange);
}

.scrollCta::before, .scrollCta::after{
    content: url(../../public/desktop/tripletriangle.svg);
    transform: scale(var(--scale-svg-small));
}


.scrollCta {
    padding-inline: var(--gap-medium);
    display: flex;
    background-color: var(--color-red);
    align-items: center;
    justify-content: space-between;
    z-index: 2;
}
.scrollCta>p::before,
.scrollCta>p::after {
    content: url(../../public/desktop/downtriangle.svg);
    position: inherit;
    transform: scale(var(--scale-svg-small));
}

.scrollCta > p{
    display: flex;
    align-items: center;
    gap: var(--gap-miniscule);
}

.section {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
}

.container__footer {
    padding-inline: var(--gap-enormous);
    background-color: var(--color-orange);
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(2, 1fr);
}

.container__socials {
    display: flex;
    gap: var(--gap-medium);
}

.footer__info {
    grid-column: 1 /span 3;
    grid-row: 2;
    place-self: center;
}

